--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
       - 3306:3306
     hostname: db
 
-  app:
-    build:
-      context: app
-    ports:
-      - 8888:8888
+#  app:
+#    build:
+#      context: app
+#    ports:
+#      - 8888:8888
