--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -7,5 +7,12 @@ edition = "2021"
 
 [dependencies]
 axum = "0.5.6"
+serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
+sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "mysql", "bigdecimal", "decimal"] }
+anyhow = "1"
+validator = { version = "0.12", features = ["derive"] }
+thiserror = "1"
+async-trait = "0.1"
+num-traits = "0.2.15"
